# cspec

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  automake.sh  bootstrap  config.status  configure  configure.ac  reinstall.sh  remake.sh
autom4te.cache/: output.1  traces.0  traces.1
examples/sample/: fabs_desc.c  main.c  sample
examples/sample/spec/: fabs_spec.c  main_spec.c
examples/skip/spec/: main_spec.c  skiplist_spec.c
examples/spec/: Makefile  Makefile.in
inc/: cspec.h  cspec_output.h  cspec_private.h
script/: Makefile.am  cspec  cspec.in
spec/: Makefile.am  array_spec.c  cspec_output_junit_xml_spec.c  spec_runner.c
src/: Makefile  Makefile.am  Makefile.in  cspec_config.c  cspec_output_verbose.c  cspec_output_xml.c  cspec_private.c
src/.deps/: array.Po  cspec_config.Po  cspec_output.Po  cspec_output_header.Po  cspec_output_junit_xml.Po  cspec_output_unit.Po  cspec_output_verbose.Po  cspec_output_xml.Po  cspec_private.Po  cspec_runner.Po
